# rust_twitter_bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
dialogue/: dialogue.txt
gihun/: Cargo.toml
gihun-core/: Cargo.toml
gihun-core/src/: agent.rs  attention.rs
gihun-core/src/clients/: galadriel.rs  telegram.rs  twitter.rs
gihun-core/src/knowledge/: store.rs
gihun-core/src/loaders/: mod.rs  pdf.rs  txt.rs
gihun/src/: main.rs
gihun/src/characters/: gihun.toml
